fixed bug on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -84,7 +84,7 @@ html {
   overflow-x: hidden; }
 
 body {
-  overflow-y: hidden; }
+  overflow: hidden; }
 
 .container {
   width: 100%;
