--- a/src/sass/layout/_base.sass
+++ b/src/sass/layout/_base.sass
@@ -6,7 +6,7 @@ html
   overflow-x: hidden
 
 body
-  overflow-y: hidden
+  overflow: hidden
 
 .container
   width: 100%
